[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/resources/sprite_frames/actions/AttackSpriteFrames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://scripts/ui/InfoBox.gd" type="Script" id=2]
[ext_resource path="res://assets/resources/sprite_frames/actions/TriangleSpriteFrames.tres" type="SpriteFrames" id=3]
[ext_resource path="res://assets/sprites/ui/info_box.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/passives/negative_passive.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/passives/vine.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/Game-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 7 )

[node name="InfoBox" type="CanvasLayer"]
layer = 3
script = ExtResource( 2 )

[node name="InfoBox" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Margin" type="MarginContainer" parent="InfoBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 600.0
margin_top = 550.0
margin_right = -600.0
margin_bottom = -350.0

[node name="NinePatchRect" type="NinePatchRect" parent="InfoBox/Margin"]
margin_right = 720.0
margin_bottom = 180.0
texture = ExtResource( 4 )
patch_margin_left = 175
patch_margin_top = 80
patch_margin_right = 175
patch_margin_bottom = 80

[node name="Margin" type="MarginContainer" parent="InfoBox/Margin/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBox" type="HBoxContainer" parent="InfoBox/Margin/NinePatchRect/Margin"]
margin_right = 720.0
margin_bottom = 180.0
custom_constants/separation = 25

[node name="ActionSpriteContainer" type="Control" parent="InfoBox/Margin/NinePatchRect/Margin/HBox"]
visible = false
margin_right = 150.0
margin_bottom = 180.0
rect_min_size = Vector2( 150, 180 )

[node name="BottomSprite" type="AnimatedSprite" parent="InfoBox/Margin/NinePatchRect/Margin/HBox/ActionSpriteContainer"]
position = Vector2( 35, 30 )
scale = Vector2( 1.5, 1.5 )
frames = ExtResource( 3 )
animation = "boil"
playing = true
centered = false

[node name="TopSprite" type="AnimatedSprite" parent="InfoBox/Margin/NinePatchRect/Margin/HBox/ActionSpriteContainer"]
position = Vector2( 35, 30 )
scale = Vector2( 1.5, 1.5 )
frames = ExtResource( 1 )
animation = "boil"
playing = true
centered = false

[node name="PassiveEffectSpriteContainer" type="Control" parent="InfoBox/Margin/NinePatchRect/Margin/HBox"]
margin_right = 150.0
margin_bottom = 180.0
rect_min_size = Vector2( 150, 180 )

[node name="BottomSprite" type="Sprite" parent="InfoBox/Margin/NinePatchRect/Margin/HBox/PassiveEffectSpriteContainer"]
position = Vector2( 35, 30 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )
centered = false

[node name="TopSprite" type="Sprite" parent="InfoBox/Margin/NinePatchRect/Margin/HBox/PassiveEffectSpriteContainer"]
position = Vector2( 35, 30 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
centered = false

[node name="VBox" type="VBoxContainer" parent="InfoBox/Margin/NinePatchRect/Margin/HBox"]
margin_left = 175.0
margin_right = 695.0
margin_bottom = 180.0
size_flags_horizontal = 3

[node name="PaddingTop" type="Control" parent="InfoBox/Margin/NinePatchRect/Margin/HBox/VBox"]
margin_right = 520.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )

[node name="VBox" type="VBoxContainer" parent="InfoBox/Margin/NinePatchRect/Margin/HBox/VBox"]
margin_top = 29.0
margin_right = 520.0
margin_bottom = 161.0
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="NameLabel" type="Label" parent="InfoBox/Margin/NinePatchRect/Margin/HBox/VBox/VBox"]
margin_right = 520.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 1 )
text = "SWORD (locked)"
valign = 2
autowrap = true

[node name="Label" type="Label" parent="InfoBox/Margin/NinePatchRect/Margin/HBox/VBox/VBox"]
margin_top = 41.0
margin_right = 520.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "deal 1 damage
deal 1 damage
deal 1 damage"
valign = 1
autowrap = true

[node name="PaddingBottom" type="Control" parent="InfoBox/Margin/NinePatchRect/Margin/HBox/VBox"]
margin_top = 165.0
margin_right = 520.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 15 )

[node name="Padding" type="Control" parent="InfoBox/Margin/NinePatchRect/Margin/HBox"]
margin_left = 720.0
margin_right = 720.0
margin_bottom = 180.0
